LayoutTests/http/tests/security/clipboard/resources/clipboard-file-access.js
@@ -8,10 +8,12 @@ dragTarget.style.height = "100px";
 // Important that we put this at the top of the doc so that logging does not cause it to go out of view (and be undragable)
 document.body.insertBefore(dragTarget, document.body.firstChild);
 
+var filesToDrag;
 dragTarget.addEventListener("dragenter", function() {
     debug("On dragenter:")
     event.dataTransfer.dropEffect = "copy";
-    eventShouldContainTransferType(event, "Files");
+    var shouldContainType = (filesToDrag.length > 0);
+    checkForEventTransferType(event, "Files", shouldContainType);
     fileListShouldBe("event.dataTransfer.files", []);
     event.preventDefault();
 }, false);
@@ -19,21 +21,24 @@ dragTarget.addEventListener("dragenter", function() {
 dragTarget.addEventListener("dragover", function() {
     debug("On dragover:")
     event.dataTransfer.dropEffect = "copy";
-    eventShouldContainTransferType(event, "Files");
+    var shouldContainType = (filesToDrag.length > 0);
+    checkForEventTransferType(event, "Files", shouldContainType);
     fileListShouldBe("event.dataTransfer.files", []);
     event.preventDefault();
 }, false);
 
 dragTarget.addEventListener("dragleave", function() {
     debug("On dragleave:")
-    eventShouldContainTransferType(event, "Files");
+    var shouldContainType = (filesToDrag.length > 0);
+    checkForEventTransferType(event, "Files", shouldContainType);
     fileListShouldBe("event.dataTransfer.files", []);
 }, false);
 
 var expectedFilesOnDrop;
 dragTarget.addEventListener("drop", function() {
     debug("On drop:")
-    eventShouldContainTransferType(event, "Files");
+    var shouldContainType = (filesToDrag.length > 0);
+    checkForEventTransferType(event, "Files", shouldContainType);
     fileListShouldBe("event.dataTransfer.files", expectedFilesOnDrop);
     event.preventDefault();
 }, false);
@@ -51,6 +56,7 @@ function moveMouseToOutsideOfElement(element) {
 }
 
 function dragFilesOntoDragTarget(files, leave) {
+    filesToDrag = files;
     eventSender.beginDragWithFiles(files);
     moveMouseToCenterOfElement(dragTarget);
     if (leave && leave === true)
@@ -58,12 +64,21 @@ function dragFilesOntoDragTarget(files, leave) {
     eventSender.mouseUp();
 }
 
-function eventShouldContainTransferType(event, typeString)
+function checkForEventTransferType(event, typeString, shouldContainType)
 {
-   if (event.dataTransfer.types.indexOf(typeString) == -1)
-       testFailed("event.dataTransfer.types " + typeString + " expected.");
-   else
-       testPassed("event.dataTransfer.types contains " + typeString + ".");
+    var passedCheck;
+    var message;
+    if (event.dataTransfer.types && event.dataTransfer.types.indexOf(typeString) != -1) {
+        passedCheck = shouldContainType;
+        message = "event.dataTransfer.types contains " + typeString + ".";
+    } else {
+        passedCheck = !shouldContainType;
+        message = "event.dataTransfer.types does not contain " + typeString + ".";
+    }
+    if (passedCheck)
+        testPassed(message);
+    else
+        testFailed(message);
 }
 
 function fileListShouldBe(fileListString, filesArray)
